# traffic-flow-analyzer

./: .gitignore  README.md  SetupWizard.spec  TrafficFlowAnalyzer.spec  build_release.py  calibrate_roi.py  desktop_app.py  gui_app.py  install.bat  main.py  pipeline.py  pyproject.toml  requirements.txt  run.bat  setup.bat  setup_wizard.py
config/: camera_roi.yaml  model_config.yaml
src/: __init__.py  data_processor.py  detector.py  roi_filter.py  tracker.py  visualizer.py
